--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Shristi Press - Get in touch for quality custom printing services. Call, email, or visit us for all your printing needs.">
     <meta name="keywords" content="contact, printing services, Shristi Press, custom printing, business printing">
     <title>Contact Us - Shristi Press | Quality Custom Printing</title>
+    
+
     
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -49,7 +51,6 @@
         .gradient-bg { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
         .glass-effect { backdrop-filter: blur(10px); background: rgba(255, 255, 255, 0.1); }
     </style>
-    <link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body class="bg-gray-50 font-inter">
@@ -605,6 +606,5 @@
             }
         }
     </script>
-    <script src="js/dark-mode.js"></script>
 </body>
 </html>
