--- a/services/annual-reports-printing.html
+++ b/services/annual-reports-printing.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annual Reports Printing - Drishthi Printing</title>
+
     <meta name="description" content="Professional annual reports printing services with high-quality paper, perfect binding, and corporate design. Create impressive reports that reflect your company's success.">
     
     <!-- Tailwind CSS -->
@@ -43,7 +44,6 @@
     </script>
     <!-- Main Site Styles -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 <body class="font-inter bg-white">
     <!-- Skip to Content (Accessibility) -->
@@ -169,11 +169,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -435,6 +430,5 @@
     </script>
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 </html>
