--- a/services/catalogue.html
+++ b/services/catalogue.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Catalog & Brochure Printing | Professional Print Services</title>
+
     <meta name="description"
         content="High-quality catalog and brochure printing services. Professional full-color printing with fast turnaround, competitive pricing, and premium materials.">
 
@@ -175,7 +176,6 @@
     </style>
     <!-- Main Site Styles -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body class="bg-gray-50 font-sans antialiased overflow-x-hidden">
@@ -302,11 +302,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -2265,7 +2260,6 @@ tact Section -->
         </script>
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
