--- a/services/childrens-book-printing.html
+++ b/services/childrens-book-printing.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Children's Book Printing | Premium Quality Books | Drishthi Printing</title>
+
     <meta name="description"
         content="Professional children's book printing services with premium quality paper, vibrant colors, and durable binding. Get instant quotes and fast delivery.">
     <meta name="keywords"
@@ -34,7 +35,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -161,11 +161,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -1027,7 +1022,6 @@
         </div>
     </footer>
 
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
