--- a/services/coffee-table-book-printing.html
+++ b/services/coffee-table-book-printing.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Table Book Printing | Premium Large Format Book Printing Services</title>
+
     <meta name="description"
         content="Professional coffee table book printing with premium materials, stunning color reproduction, and luxury finishes. Custom sizes, hardcover binding, and competitive pricing in INR.">
 
@@ -58,10 +59,9 @@
     </script>
     <!-- Main Site Styles -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
-<body class="bg-white text-dark font-inter leading-relaxed">
+<body class="bg-white text- font-inter leading-relaxed">
     <!-- Skip to Content (Accessibility) -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
@@ -185,11 +185,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -226,7 +221,7 @@
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <!-- Left Content -->
                 <div class="animate-slide-up">
-                    <h1 class="font-playfair text-4xl lg:text-5xl xl:text-6xl font-bold text-dark leading-tight mb-6">
+                    <h1 class="font-playfair text-4xl lg:text-5xl xl:text-6xl font-bold text- leading-tight mb-6">
                         Coffee Table Book Printing
                     </h1>
 
@@ -325,7 +320,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Section Title -->
             <div class="text-center mb-12">
-                <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-4">
+                <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-4">
                     Hardcover Coffee Table Book Instant Quote
                 </h2>
             </div>
@@ -337,7 +332,7 @@
                     <div class="lg:col-span-2 p-8 lg:p-12 space-y-8">
                         <!-- Book Type Tabs -->
                         <div class="space-y-4">
-                            <label class="block text-lg font-semibold text-dark mb-4">Book Type</label>
+                            <label class="block text-lg font-semibold text- mb-4">Book Type</label>
                             <div class="flex space-x-1 bg-gray-100 rounded-lg p-1">
                                 <button
                                     class="flex-1 py-3 px-6 bg-primary text-white rounded-md font-semibold transition-all book-type-tab active"
@@ -355,7 +350,7 @@
                         <!-- Quantity Input -->
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div class="space-y-3">
-                                <label class="block text-lg font-semibold text-dark">Quantity</label>
+                                <label class="block text-lg font-semibold text-">Quantity</label>
                                 <div class="flex items-center space-x-3">
                                     <button
                                         class="w-12 h-12 bg-gray-100 hover:bg-gray-200 rounded-lg flex items-center justify-center font-bold text-xl transition-colors qty-btn"
@@ -370,7 +365,7 @@
 
                             <!-- Size Selection -->
                             <div class="space-y-3">
-                                <label class="block text-lg font-semibold text-dark">Size</label>
+                                <label class="block text-lg font-semibold text-">Size</label>
                                 <select id="bookSize"
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg text-lg focus:border-primary focus:ring-0 outline-none transition-colors">
                                     <option value="8x10">8" × 10" (Standard)</option>
@@ -389,7 +384,7 @@
 
                         <!-- Pages Slider -->
                         <div class="space-y-4">
-                            <label class="block text-lg font-semibold text-dark">Pages</label>
+                            <label class="block text-lg font-semibold text-">Pages</label>
                             <div class="flex items-center space-x-6">
                                 <input type="range" id="pageSlider" min="20" max="300" value="80"
                                     class="flex-1 h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider">
@@ -405,7 +400,7 @@
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <!-- Interior Paper -->
                             <div class="space-y-3">
-                                <label class="block text-lg font-semibold text-dark">Interior Paper</label>
+                                <label class="block text-lg font-semibold text-">Interior Paper</label>
                                 <select id="interiorPaper"
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg text-lg focus:border-primary focus:ring-0 outline-none transition-colors">
                                     <option value="128gsm">128 GSM Matte Art Paper</option>
@@ -416,7 +411,7 @@
 
                             <!-- Cover Paper -->
                             <div class="space-y-3">
-                                <label class="block text-lg font-semibold text-dark">Cover Paper</label>
+                                <label class="block text-lg font-semibold text-">Cover Paper</label>
                                 <select id="coverPaper"
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg text-lg focus:border-primary focus:ring-0 outline-none transition-colors">
                                     <option value="250gsm" selected>250 GSM Art Board</option>
@@ -428,7 +423,7 @@
 
                         <!-- Lamination Options -->
                         <div class="space-y-4">
-                            <label class="block text-lg font-semibold text-dark">Lamination</label>
+                            <label class="block text-lg font-semibold text-">Lamination</label>
                             <div class="grid grid-cols-2 md:grid-cols-4 gap-3">
                                 <button
                                     class="lamination-option active p-4 border-2 border-primary bg-primary/5 rounded-xl text-center hover:bg-primary/10 transition-all"
@@ -461,7 +456,7 @@
 
                         <!-- Special Finishes -->
                         <div class="space-y-4">
-                            <label class="block text-lg font-semibold text-dark">Special Finishes</label>
+                            <label class="block text-lg font-semibold text-">Special Finishes</label>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                 <label
                                     class="flex items-center space-x-3 p-3 border-2 border-gray-200 rounded-lg hover:border-primary transition-colors cursor-pointer">
@@ -484,7 +479,7 @@
 
                         <!-- Auto Calculations Display -->
                         <div class="bg-gray-50 rounded-xl p-6 space-y-3">
-                            <h4 class="font-semibold text-dark mb-3">Book Specifications</h4>
+                            <h4 class="font-semibold text- mb-3">Book Specifications</h4>
                             <div class="grid grid-cols-2 gap-4 text-sm">
                                 <div class="flex justify-between">
                                     <span class="text-gray-600">Spine Width:</span>
@@ -589,7 +584,7 @@
 
                 <!-- Content -->
                 <div class="order-1 lg:order-2">
-                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-6">
+                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-6">
                         Cloth Cover Coffee Table Book Printing
                     </h2>
                     <p class="text-lg text-gray-600 leading-relaxed mb-8">
@@ -600,7 +595,7 @@
 
                     <!-- Color Swatches -->
                     <div class="mb-8">
-                        <h4 class="font-semibold text-dark mb-4">Available Colors:</h4>
+                        <h4 class="font-semibold text- mb-4">Available Colors:</h4>
                         <div class="grid grid-cols-8 gap-3">
                             <div class="group relative">
                                 <div class="w-12 h-12 bg-gray-800 rounded-lg shadow-md cursor-pointer hover:scale-110 transition-transform"
@@ -679,7 +674,7 @@
             <div class="grid lg:grid-cols-2 gap-16 items-center">
                 <!-- Content -->
                 <div>
-                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-6">
+                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-6">
                         Faux Leather Coffee Table Book Cover Options
                     </h2>
                     <p class="text-lg text-gray-600 leading-relaxed mb-8">
@@ -690,7 +685,7 @@
 
                     <!-- Leather Texture Swatches -->
                     <div class="mb-8">
-                        <h4 class="font-semibold text-dark mb-4">Leather Textures & Colors:</h4>
+                        <h4 class="font-semibold text- mb-4">Leather Textures & Colors:</h4>
                         <div class="grid grid-cols-4 gap-4">
                             <div class="group relative">
                                 <div class="w-20 h-20 bg-gradient-to-br from-amber-800 to-amber-900 rounded-lg shadow-lg cursor-pointer hover:scale-110 transition-transform"
@@ -757,7 +752,7 @@
             <div class="grid lg:grid-cols-2 gap-16 items-center">
                 <!-- Content -->
                 <div>
-                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-6">
+                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-6">
                         Large-Size Coffee Table Book Printing
                     </h2>
                     <p class="text-lg text-gray-600 leading-relaxed mb-8">
@@ -804,7 +799,7 @@
 
                 <!-- Content -->
                 <div>
-                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-6">
+                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-6">
                         Gilded Edges Coffee Table Book Printing
                     </h2>
                     <p class="text-lg text-gray-600 leading-relaxed mb-8">
@@ -827,7 +822,7 @@
             <div class="grid lg:grid-cols-2 gap-16 items-center">
                 <!-- Content -->
                 <div>
-                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text-dark mb-6">
+                    <h2 class="font-playfair text-4xl lg:text-5xl font-bold text- mb-6">
                         Coffee Table Book Printing with Slipcase
                     </h2>
                     <p class="text-lg text-gray-600 leading-relaxed mb-8">
@@ -1285,7 +1280,6 @@
     </script>
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
