--- a/services/cosmetic-paper-boxes.html
+++ b/services/cosmetic-paper-boxes.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuxePrint | Professional Printing & Packaging</title>
+
 
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -771,7 +772,6 @@
     </style>
     <!-- Main Site Styles -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -898,11 +898,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -1521,7 +1516,6 @@
 
     <!-- Main Site Scripts -->
     <script defer src="../js/script.js"></script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
