--- a/services/poster.html
+++ b/services/poster.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Poster Printing - Professional Quality Printing Services</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -85,7 +86,6 @@
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
         }
     </style>
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body class="bg-white font-sans">
@@ -212,11 +212,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -1180,7 +1175,6 @@
             });
         });
     </script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html></button> <!-- I
@@ -2117,7 +2111,6 @@ nteractive Size Guide -->
             });
         });
     </script>
-        <script src="../js/dark-mode.js"></script>
-</body>
+    </body>
 
     </html>
