--- a/services/retail-paper-boxes.html
+++ b/services/retail-paper-boxes.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Custom Retail Paper Boxes | QinPrinting</title>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -833,7 +834,6 @@
             font-weight: 900;
         }
     </style>
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -966,11 +966,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -1733,7 +1728,6 @@
 
         <!-- Main Site Scripts -->
         <script defer src="../js/script.js"></script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>
