--- a/services/standees.html
+++ b/services/standees.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,6 +20,7 @@
     <meta property="og:type" content="website">
 
     <title>Custom Roll-Up Standees - Professional Display Solutions | Shristi Press</title>
+
 
     <!-- Favicon -->
     <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
@@ -1015,7 +1016,6 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -1142,11 +1142,6 @@
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn-theme-toggle" id="themeToggle" aria-label="Toggle dark mode"
-                            title="Toggle dark mode">
-                            <span class="theme-icon light-icon" aria-hidden="true">☀️</span>
-                            <span class="theme-icon dark-icon" aria-hidden="true">🌙</span>
-                        </button>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -2277,7 +2272,6 @@
             }
         });
     </script>
-    <script src="../js/dark-mode.js"></script>
 </body>
 
 </html>""
