--- a/hero-section.html
+++ b/hero-section.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Hero Section -->
-    <section class="relative min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 overflow-hidden" 
+    <section class="relative h-screen w-full bg-gradient-to-br from-gray-50 to-gray-100 overflow-hidden" 
              x-data="{ loaded: false }" 
              x-init="setTimeout(() => loaded = true, 100)">
         
@@ -37,8 +37,8 @@
         <div class="absolute bottom-0 left-0 w-1/4 h-1/2 bg-gradient-to-r from-gray-100 to-transparent transform -skew-x-12 origin-bottom-left opacity-20"></div>
 
         <!-- Main Content Container -->
-        <div class="relative z-10 container mx-auto px-6 lg:px-8 min-h-screen">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 items-center min-h-screen py-12">
+        <div class="relative z-10 container mx-auto px-6 lg:px-8 h-full flex items-center">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 items-center w-full">
                 
                 <!-- Left Column - Text Content -->
                 <div class="text-center lg:text-left order-2 lg:order-1" 
