--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             visibility: hidden;
             transition: all 0.3s ease;
             z-index: 1000;
-            min-width: 800px;
+            min-width: 900px;
             margin-top: 0.5rem;
         }
 
@@ -168,12 +168,14 @@
 
         .mega-menu-content {
             padding: 2rem;
+            position: relative;
         }
 
         .mega-menu-columns {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 2rem;
+            margin-right: 220px;
         }
 
         .mega-menu-column {
@@ -206,6 +208,8 @@
             transition: color 0.3s ease;
             display: block;
             padding: 0.25rem 0;
+            position: relative;
+            z-index: 20;
         }
 
         .mega-menu-links a:hover {
@@ -220,6 +224,8 @@
             height: 200px;
             border-radius: 0.5rem;
             overflow: hidden;
+            z-index: 10;
+            pointer-events: none;
         }
 
         .image-panel-content {
