--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
             color: #4c1d95;
         }
 
-        .mega-menu-item > a {
+        .mega-menu-item>a {
             position: relative;
             transition: all 0.3s ease;
         }
 
-        .mega-menu-item > a:hover {
+        .mega-menu-item>a:hover {
             color: #4c1d95;
         }
 
-        .mega-menu-item > a::after {
+        .mega-menu-item>a::after {
             content: '';
             position: absolute;
             bottom: -5px;
@@ -152,7 +152,7 @@
             border-radius: 1px;
         }
 
-        .mega-menu-item:hover > a::after {
+        .mega-menu-item:hover>a::after {
             width: 100%;
         }
 
@@ -170,30 +170,39 @@
             display: inline-block;
         }
 
-        .mega-menu {
-            position: absolute;
-            top: calc(100% + 1rem);
-            left: 0;
-            right: 0;
-            transform: translateY(-10px) scaleX(0.95);
-            background: white;
-            border: none;
-            border-radius: 1rem;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.15), 0 10px 20px -5px rgba(0, 0, 0, 0.1);
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            z-index: 1000;
-            width: 100%;
-            max-width: 100%;
-            padding: 0.5rem;
-            transform-origin: center top;
+        /* Ensure mega menu is always centered */
+        .mega-menu-item .mega-menu {
+            left: 50% !important;
+            transform: translateX(-50%) translateY(-10px) !important;
         }
 
-        .mega-menu-item:hover .mega-menu {
+        .mega-menu-item:hover .mega-menu,
+        .mega-menu:hover {
+            transform: translateX(-50%) translateY(0) !important;
+        }
+
+        .mega-menu {
+            position: absolute;
+            top: calc(100% + 0.5rem);
+            left: 50%;
+            transform: translateX(-50%) translateY(-10px);
+            width: 100vw;
+            background: white;
+            border: none;
+            border-top: 1px solid #e5e7eb;
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 4px 10px -2px rgba(0, 0, 0, 0.05);
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            z-index: 1000;
+            padding: 0;
+        }
+
+        .mega-menu-item:hover .mega-menu,
+        .mega-menu:hover {
             opacity: 1;
             visibility: visible;
-            transform: translateY(0) scaleX(1);
+            transform: translateX(-50%) translateY(0);
         }
 
         .mega-menu-item:hover .dropdown-arrow {
@@ -201,19 +210,24 @@
         }
 
         .mega-menu-content {
-            padding: 2.5rem 4rem;
+            padding: 1.5rem 0;
             position: relative;
             background: white;
-            border-radius: 0.75rem;
-            max-width: 1400px;
+            max-width: 1200px;
             margin: 0 auto;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            display: flex;
+            justify-content: flex-start;
         }
 
         .mega-menu-columns {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 3rem;
-            margin-right: 280px;
+            gap: 2rem;
+            margin-right: 240px;
+            position: relative;
+            z-index: 20;
         }
 
         .mega-menu-column {
@@ -222,10 +236,10 @@
 
         .mega-menu-heading {
             color: #4c1d95;
-            font-size: 1.125rem;
+            font-size: 1rem;
             font-weight: 700;
-            margin-bottom: 1.25rem;
-            padding-bottom: 0.75rem;
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
             position: relative;
             display: flex;
             align-items: center;
@@ -234,8 +248,8 @@
         .mega-menu-heading::before {
             content: "•";
             color: #4c1d95;
-            font-size: 1.5rem;
-            margin-right: 0.75rem;
+            font-size: 1.2rem;
+            margin-right: 0.5rem;
             line-height: 1;
         }
 
@@ -244,7 +258,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 120%;
+            width: 100%;
             height: 2px;
             background: linear-gradient(90deg, #4c1d95, #7c3aed);
             border-radius: 1px;
@@ -257,21 +271,21 @@
         }
 
         .mega-menu-links li {
-            margin-bottom: 0.75rem;
+            margin-bottom: 0.5rem;
         }
 
         .mega-menu-links a {
             color: #6b7280;
             text-decoration: none;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             font-weight: 500;
             transition: all 0.3s ease;
             display: block;
-            padding: 0.5rem 0.75rem;
-            border-radius: 0.5rem;
+            padding: 0.4rem 0.5rem;
+            border-radius: 0.4rem;
             position: relative;
-            z-index: 20;
-            line-height: 1.4;
+            z-index: 25;
+            line-height: 1.3;
         }
 
         .mega-menu-links a:hover {
@@ -282,13 +296,13 @@
 
         .mega-menu-image-panel {
             position: absolute;
-            right: 4rem;
+            right: 2.5rem;
             top: 2.5rem;
-            width: 250px;
-            height: 250px;
+            width: 220px;
+            height: 220px;
             border-radius: 1rem;
             overflow: hidden;
-            z-index: 10;
+            z-index: 5;
             pointer-events: none;
             box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.2);
         }
@@ -372,25 +386,13 @@
 
         /* Mobile Responsive */
         @media (max-width: 1024px) {
-            .mega-menu {
-                left: 0;
-                right: 0;
-                transform: translateY(-10px);
-                padding: 0.25rem;
-            }
-
-            .mega-menu-item:hover .mega-menu {
-                transform: translateY(0);
-            }
-
             .mega-menu-content {
-                padding: 2rem 3rem;
-                max-width: 100%;
+                padding: 1.25rem 1.5rem;
             }
 
             .mega-menu-columns {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 2.5rem;
+                gap: 1.5rem;
                 margin-right: 0;
             }
 
@@ -427,10 +429,17 @@
             .mega-menu {
                 position: static;
                 transform: none;
-                min-width: auto;
+                width: auto;
                 margin-top: 1rem;
                 box-shadow: none;
                 border: 1px solid #e5e7eb;
+                border-radius: 0.5rem;
+                left: 0;
+            }
+
+            .mega-menu-content {
+                padding: 1rem;
+                justify-content: flex-start;
             }
 
             .mega-menu-columns {
