--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         .mega-menu {
             position: absolute;
-            top: calc(100% + 0.5rem);
+            top: calc(100% + 1rem);
             left: 50%;
             transform: translateX(-50%) translateY(-10px);
             width: 100vw;
@@ -215,7 +215,7 @@
             background: white;
             max-width: 1200px;
             margin: 0 auto;
-            padding-left: 2rem;
+            padding-left: 0.5rem;
             padding-right: 2rem;
             display: flex;
             justify-content: flex-start;
@@ -228,6 +228,7 @@
             margin-right: 240px;
             position: relative;
             z-index: 20;
+            margin-left: 0;
         }
 
         .mega-menu-column {
@@ -351,20 +352,60 @@
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
-        .navbar-actions .btn {
-            background: #3b82f6;
-            color: white;
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 0.5rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s ease;
+        .navbar-actions {
+            display: flex;
+            align-items: center;
         }
 
-        .navbar-actions .btn:hover {
-            background: #2563eb;
+        .navbar-actions a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5rem;
+            border-radius: 0.5rem;
+            transition: all 0.3s ease;
+            position: relative;
+            min-width: 50px;
+        }
+
+        .navbar-actions a:hover {
+            background: #f3f4f6;
             transform: translateY(-2px);
+        }
+
+        .navbar-actions a:active {
+            transform: translateY(0);
+        }
+
+        .navbar-actions span {
+            margin-top: 0.25rem;
+            font-size: 0.75rem;
+            font-weight: 500;
+            line-height: 1;
+        }
+
+        /* Shopping cart badge for items count */
+        .navbar-actions a[aria-label="Shopping Cart"] {
+            position: relative;
+        }
+
+        .navbar-actions a[aria-label="Shopping Cart"]::after {
+            content: "0";
+            position: absolute;
+            top: 0.25rem;
+            right: 0.25rem;
+            background: #ef4444;
+            color: white;
+            font-size: 0.75rem;
+            font-weight: 600;
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid white;
         }
 
         .navbar-toggle {
@@ -387,13 +428,14 @@
         /* Mobile Responsive */
         @media (max-width: 1024px) {
             .mega-menu-content {
-                padding: 1.25rem 1.5rem;
+                padding: 1.25rem 0.5rem;
             }
 
             .mega-menu-columns {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 1.5rem;
                 margin-right: 0;
+                margin-left: 0;
             }
 
             .mega-menu-image-panel {
@@ -1368,14 +1410,27 @@
                                 </div>
                             </div>
                         </li>
-                        <li role="none"><a href="#products" role="menuitem">Products</a></li>
+                        
                         <li role="none"><a href="#about" role="menuitem">About</a></li>
                         <li role="none"><a href="#blog" role="menuitem">Blog</a></li>
                         <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
                     </ul>
 
                     <div class="navbar-actions">
-                        <button class="btn btn-primary">Get Started</button>
+                        <div class="flex items-center space-x-6">
+                            <a href="#" class="flex flex-col items-center text-gray-600 hover:text-purple-600 transition-colors duration-300 group" aria-label="Shopping Cart">
+                                <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-2.5 5M7 13l2.5 5m6-5v6a2 2 0 01-2 2H9a2 2 0 01-2-2v-6m6 0V9a2 2 0 00-2-2H9a2 2 0 00-2 2v4.01"></path>
+                                </svg>
+                                <span class="text-xs font-medium">Cart</span>
+                            </a>
+                            <a href="#" class="flex flex-col items-center text-gray-600 hover:text-purple-600 transition-colors duration-300 group" aria-label="Login">
+                                <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+                                </svg>
+                                <span class="text-xs font-medium">Login</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
